apps/raspberry-pi-cluster/smokeping/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokeing-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: smokeping.pi.gsdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smokeping-svc
                port:
                  number: 80
